# CodeHarness

./: .clang-format  .gitignore  .gitmodules  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  vcpkg.json  xmake.lua
Apps/DesktopWinUI/: App.idl  App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  CodeHarnessDesktop.Xaml.targets  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  Resources.rc  XamlMetaDataProvider.cpp  XamlMetaDataProvider.h  XamlMetaDataProvider.idl  app.manifest  main.cpp
Apps/DesktopWinUI/Controls/: ComposerBox.idl  ComposerBox.xaml  ComposerBox.xaml.cpp  ComposerBox.xaml.h  PermissionDialog.idl  PermissionDialog.xaml  PermissionDialog.xaml.cpp  PermissionDialog.xaml.h  Sidebar.idl  Sidebar.xaml  Sidebar.xaml.cpp  Sidebar.xaml.h  ToolCallView.idl  ToolCallView.xaml  ToolCallView.xaml.cpp  ToolCallView.xaml.h
Apps/DesktopWinUI/Services/: DesktopCoreService.cpp  DesktopCoreService.h  DialogService.cpp  DialogService.h  UiDispatcher.cpp  UiDispatcher.h
Apps/DesktopWinUI/Themes/: Colors.xaml  Controls.xaml  Typography.xaml
Apps/DesktopWinUI/ViewModels/: ChatViewModel.cpp  ChatViewModel.h  MessageViewModel.cpp  MessageViewModel.h  SessionListViewModel.cpp  SessionListViewModel.h
Apps/DesktopWinUI/Views/: ChatPage.idl  ChatPage.xaml  ChatPage.xaml.cpp  ChatPage.xaml.h  SettingsPage.idl  SettingsPage.xaml  SettingsPage.xaml.cpp  SettingsPage.xaml.h  ShellPage.idl  ShellPage.xaml  ShellPage.xaml.cpp  ShellPage.xaml.h
Source/CodeHarness/: CMakeLists.txt
Source/CodeHarness/Agent/: Agent.cpp  Agent.h  AgentTypes.h
Source/CodeHarness/Cli/: CliOptions.h  CliParser.cpp  CliParser.h  Main.cpp  RunPrompt.cpp  RunPrompt.h
Source/CodeHarness/Config/: Config.h  ConfigManager.cpp  ConfigManager.h  ConfigTypes.h  ProviderManager.cpp  ProviderManager.h
Source/CodeHarness/Context/: Compactor.cpp  Compactor.h  ContextMemory.cpp  ContextMemory.h  TokenEstimate.cpp  TokenEstimate.h
Source/CodeHarness/Desktop/: DesktopEventJson.cpp  DesktopEventJson.h  DesktopModels.h
Source/CodeHarness/Engine/: Loop.cpp  Loop.h  LoopHooks.h  LoopTypes.h  Tool.h  ToolScheduler.cpp  ToolScheduler.h
Source/CodeHarness/Hooks/: HookEngine.cpp  HookEngine.h  HookTypes.h
Source/CodeHarness/Host/: CurrentHost.cpp  CurrentHost.h  Environment.cpp  Environment.h  Host.h  HostErrors.h  HostPath.cpp  HostPath.h  HostProcess.h  HostTypes.h  LocalHost.cpp  LocalHost.h
Source/CodeHarness/Llm/: BeastHttpClient.cpp  BeastHttpClient.h  Capability.h  ChatProvider.h  HttpClient.h  MessageJson.cpp  MessageJson.h  OpenAiProvider.cpp  OpenAiProvider.h  SseParser.cpp  SseParser.h  Types.h
Source/CodeHarness/Mcp/: McpClient.h  McpConnectionManager.cpp  McpConnectionManager.h  McpExecutableTool.cpp  McpExecutableTool.h  McpTypes.h  StdioMcpClient.cpp  StdioMcpClient.h
Source/CodeHarness/Permission/: PermissionGate.cpp  PermissionGate.h  PermissionTypes.h
Source/CodeHarness/Records/: AgentRecords.cpp  AgentRecords.h  FilePersistence.cpp  FilePersistence.h  RecordJson.cpp  RecordJson.h  RecordPersistence.h  RecordTypes.h
Source/CodeHarness/Rpc/: CoreApi.cpp  CoreApi.h  RpcTypes.h
Source/CodeHarness/Session/: Session.cpp  Session.h  SessionStore.cpp  SessionStore.h  SessionTypes.h  WorkdirKey.cpp  WorkdirKey.h
Source/CodeHarness/Skills/: SkillManager.h  (+11 more)
Test/: CMakeLists.txt
Test/Agent/: AgentTest.cpp
Test/Cli/: CliTest.cpp
Test/Config/: ConfigManagerTest.cpp  ProviderManagerTest.cpp
Test/Context/: ContextTest.cpp
Test/Desktop/: DesktopEventJsonTest.cpp
Test/Engine/: LoopTest.cpp
Test/Hooks/: HooksTest.cpp
Test/Host/: HostPathTest.cpp  LocalHostTest.cpp  Main.cpp  ProcessLifecycleTest.cpp
Test/Llm/: CapabilityTest.cpp  OpenAiProviderTest.cpp  SseParserTest.cpp
Test/Mcp/: McpTest.cpp
Test/Permission/: PermissionTest.cpp
Test/Records/: RecordsTest.cpp
Test/Rpc/: RpcTest.cpp
Test/Session/: SessionTest.cpp
Test/Skills/: SkillManagerTest.cpp  SkillParserTest.cpp  SkillRegistryTest.cpp  SkillToolTest.cpp  SkillTypesTest.cpp
Test/Tools/: BashTest.cpp  FileToolsTest.cpp  SearchToolsTest.cpp  ToolManagerTest.cpp  ToolTestFixture.h
Test/Tui/: ChromeComponentsTest.cpp  DialogComponentsTest.cpp  InputComposerLogicTest.cpp  MarkdownRendererTest.cpp  MessageEntryTest.cpp  SlashCommandsTest.cpp  ThinkingViewTest.cpp  ToolCallCardTest.cpp
src/codeharness/: CMakeLists.txt  logging.cpp  logging.h  version.h
tests/: CMakeLists.txt  agent_definition_tests.cpp  command_tests.cpp  config_tests.cpp  coordinator_tests.cpp  core_tests.cpp  engine_permission_tests.cpp  engine_tests.cpp  fake_mcp_server.cpp  gateway_tests.cpp  hook_tests.cpp  host_tests.cpp  mailbox_tests.cpp  main.cpp  mcp_tests.cpp  memory_tests.cpp  permission_tests.cpp  platform_tests.cpp  plugin_tests.cpp  prompt_tests.cpp  provider_tests.cpp  runtime_tests.cpp  session_tests.cpp  skill_tests.cpp  task_tests.cpp  team_lifecycle_tests.cpp  test_support.cpp  test_support.h  tool_tests.cpp  tui_tests.cpp  ui_backend_tests.cpp  version_tests.cpp
tests/Host/: EnvironmentTest.cpp
tests/Llm/: MessageJsonTest.cpp  OpenAiProviderTest.cpp
tests/Tools/: BashTest.cpp  FileToolsTest.cpp  SearchToolsTest.cpp  ToolOutputTest.cpp
tests/engine/: loop_test.cpp
tests/host/: environment_test.cpp  host_path_test.cpp  local_host_test.cpp  main.cpp  process_lifecycle_test.cpp
tests/llm/: capability_test.cpp  message_json_test.cpp  openai_provider_test.cpp  sse_parser_test.cpp
tests/support/: local_http_server.h
tests/unit/: test_ask_user_question_tool.cpp  test_bash_tool.cpp  test_brief_tool.cpp  test_command_registry.cpp  test_config_tool.cpp  test_cost_tracker.cpp  test_cron_tools.cpp  test_edit_file_tool.cpp  test_environment_info.cpp  test_glob_tool.cpp  test_grep_tool.cpp  test_message_json.cpp  test_plan_mode_tools.cpp  test_query_engine_integration.cpp  test_session_storage.cpp  test_sleep_tool.cpp  test_smoke.cpp  test_stream_event_json.cpp  test_todo_write_tool.cpp  test_tool_search_tool.cpp  test_web_fetch_tool.cpp  test_web_search_tool.cpp
(+638 files in other folders)
